<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".PlaceholderFragment">

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/query"
        android:hint="@string/query_hint"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/do_query_lbl"
        android:onClick="queryWeather"/>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/city_lbl"/>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_data"
        android:textAllCaps="true"
        android:textSize="24dp"
        android:textStyle="bold"
        android:id="@+id/city_value"/>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/weather_lbl"/>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_data"
        android:textAllCaps="true"
        android:textSize="24dp"
        android:textStyle="bold"
        android:id="@+id/weather_value"/>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/temperature_lbl"/>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_data"
        android:textAllCaps="true"
        android:textSize="24dp"
        android:textStyle="bold"
        android:id="@+id/temperature_value"/>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/pressure_lbl"/>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_data"
        android:textAllCaps="true"
        android:textSize="24dp"
        android:textStyle="bold"
        android:id="@+id/pressure_value"/>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/humidity_lbl"/>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_data"
        android:textAllCaps="true"
        android:textSize="24dp"
        android:textStyle="bold"
        android:id="@+id/humidity_value"/>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/logger_tv"/>
        </ScrollView>

</LinearLayout>
